# Road-User-Intelligence-Platform

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY_POLICY.md  README.md  SECURITY.md  directory_blueprint.md  docker-compose.yml  mosquitto.conf  mqtt_broker.yaml  pyproject.toml  requirements.txt  road_user_platform.db  run_pipeline.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  calibration_or_false_positive.md  config.yml  feature_request.md
.github/agents/: dpg auditor.agent.md  dpg fixer.agent.md
.github/workflows/: ci.yml
antigravity/: orchestrator.md
antigravity/agents/: analytics_dashboard_agent.md  backend_api_agent.md  cloud_infrastructure_agent.md  data_engineering_agent.md  data_streaming_agent.md  edge_vision_agent.md  research_evaluation_agent.md  rtsp_perception_agent.md  speed_estimation_agent.md  traffic_simulation_agent.md  trajectory_prediction_agent.md  violation_detection_agent.md
config/: cameras.yaml  traffic_count_line.yaml  zebra_calibration.yaml  zebra_calibration_drawn.yaml  zebra_zone.yaml  zebra_zones.yaml
deploy/: README.md
deploy/env/: edge-vision.env.example  server-common.env.example
deploy/systemd/: road-user-backend.service  road-user-edge-vision.service  road-user-forwarder.service  road-user-speed.service  road-user-violation.service
docs/: contributor_codebase_guide.md  data_governance.md  demo_guide.md  deployment_guide.md  dpg_readiness.md  dpg_submission_checklist.md  functional_requirements.md  improvement-plan.md  installation_and_deployment.md  integration_guide.md  live_validation_guide.md  recamera_deployment_plan.md  recamera_runtime_audit.md  recamera_runtime_audit_results.md  release_checklist.md  safety_and_risk.md  standards_compliance.md  system_architecture.md  use_case_catalog.md
orchestration/: master_orchestrator_prompt.md
post/: linkedin_carousel_launch.md
scripts/: build_rti_standalone.py  check_live_pipeline.sh  extract_rti_data.py  extract_rti_full.py  fix_rti_module.py  fix_rti_module_notes.py  integrate_rti_dashboard.py  move_rti_views_up.py  patch_rti_views.py  rti_public_data.json  start_central_stack.sh
scripts/recamera/: runtime_probe.sh
src/backend_api/: alerting.py  database.py  main.py  models.py  schemas.py
src/backend_api/routes/: __init__.py  _config.py  _shared.py  alerts.py  (+10 more)
src/common/: __init__.py  camera_config.py  constants.py  event_schemas.py  redaction.py
src/dashboard/: README.md
src/data_engineering/: exporter.py  extraction.py  main.py  transformation.py
src/data_streaming/: mqtt_forwarder.py
src/edge_vision/: camera_capture.py  detection.py  line_counter.py  live_preview.py  main.py  publisher.py
src/rtsp_perception/: config_loader.py  main.py  rtsp_ingestion.py  shared_modules.py
src/speed_estimation/: calibration.py  main.py  speed_calc.py
src/video_analysis/: __init__.py  detector.py  geometry.py  safety_measures.py  serializer.py  traffic_metrics.py  zebra_compliance.py
src/violation_detection/: main.py  violation_rules.py
tests/: test_alerting.py  test_backend_api.py  test_camera_config.py  test_data_engineering.py  test_event_schemas.py  test_line_counter.py  test_pipeline_integration.py  test_redaction.py  test_speed_estimation.py  test_traffic_metrics_analysis.py  test_violation_detection.py  test_zebra_compliance_analysis.py
(+19 files in other folders)
