[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-user-intelligence-platform"
version = "0.1.0"
description = "Open-source research-reference MVP for road-user analytics and crossing-safety monitoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Clement Ampofo", email = "opensource@ilmihalabs.org" }
]
keywords = ["computer-vision", "traffic-analytics", "road-safety", "zebra-crossing", "transport"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
