[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-user-intelligence-platform"
version = "0.1.1"
description = "Open-source research-reference MVP for road-user analytics and crossing-safety monitoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Clement Ampofo", email = "opensource@ilmihalabs.org" }
]
keywords = ["computer-vision", "traffic-analytics", "road-safety", "zebra-crossing", "transport"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
src = ["src"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately set env vars (e.g. DATABASE_URL) before importing the
# modules that read them at import time, so imports can't sit at the top.
"tests/*.py" = ["E402"]

[tool.mypy]
# `src/__init__.py` exists so `uvicorn src.backend_api.main:app` works as a
# deployment entrypoint, but internal modules import each other as
# `from common.x import y` (relying on PYTHONPATH=$PWD/src), not
# `from src.common.x import y`. explicit_package_bases + mypy_path make mypy
# resolve modules the same way internally, so `mypy src` from the repo root
# doesn't see the same file under two different module names.
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# These modules have a pre-existing type-checking backlog (SQLAlchemy ORM
# attribute typing on the classic declarative style, numpy/torch union
# results from Ultralytics, implicit-Optional call sites) that is out of
# scope for the CI lint gate. Remove an entry once its module's errors are
# fixed.
[[tool.mypy.overrides]]
module = [
    "backend_api.routes.analytics",
    "backend_api.routes.cameras",
    "backend_api.routes.trends",
    "backend_api.routes.video_analysis",
    "backend_api.routes.violations",
    "common.event_schemas",
    "edge_vision.detection",
    "edge_vision.line_counter",
    "edge_vision.publisher",
    "video_analysis.detector",
    "video_analysis.traffic_metrics",
    "violation_detection.violation_rules",
]
ignore_errors = true

